--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "4.14.1",
+    "immer": "^9.0.6",
+    "merge": "^2.1.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "^12.1.0",
+    "serialize-javascript": "^6.0.0",
+    "tar": "^6.1.11",
+    "trim-newlines": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
