--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
     "sass-loader": "^12.1.0",
     "serialize-javascript": "^6.0.0",
     "tar": "^6.1.11",
