--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^9.1.2",
     "immer": "^9.0.6",
     "merge": "^2.1.1",
     "node-sass": "^6.0.1",
