--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
     "sass-loader": "^12.1.0",
     "serialize-javascript": "^6.0.0",
     "tar": "^6.1.11",
